# gerbera

./: .gitignore  README.md  devices.json  main.py  pyproject.toml  requirements.txt
agents/: agents.md  claude.md
gerbera_firmware/: 27b30005-ff68-4c81-93ec-8d3ce7c7a242.ino
rulebooks/: agents.md  claude.md
src/: README.md
src/cli_app/: __init__.py  config.py  main.py
src/cli_app/commands/: detect_devices.py  root.py
src/gerbera_cli/: README.md  __init__.py  config.py  main.py  utils.py
src/gerbera_cli/commands/: README.md  __init__.py  configure_libraries.py  declare_devices_command.py  detect_devices.py  install_library_command.py  root.py  (+1 more)
src/gerbera_sdk/: README.md  __init__.py  component_schema_profiles.json  connection.py  flasher.py  gerbera_runtime.py  main.py  utils.py
tests/: README.md  conftest.py  test_component_builders.py  test_component_schema_factory.py  test_configure_libraries.py  test_database_compatibility.py  test_dcmotor_builder.py  test_detect_devices.py  test_event_runtime_ids.py  test_experiment_state_machine.py  test_firmware_generator.py  test_hardware_system.py  test_hcsr04_builder.py  test_hw201_builder.py  test_ky033_builder.py  test_led_builder.py  test_mcp_server.py  test_mg996r_builder.py  test_microcontroller_model.py  test_pin_schema_factory.py  test_rule_engine.py  test_runtime.py  test_sdk_classes.py  test_set_connections.py  test_sg90_builder.py  test_smoke.py
tests/integration/: test_agent_memory.py  test_cli.py  test_firmware_generation.py  test_runtime_lifecycle.py  test_server_runtime.py  test_stream_database.py
tests/unit/: test_agent_initialisation.py  test_cli_initialise.py  test_cli_setup.py  test_command_runtime.py  test_database_runtime.py  test_events.py  test_experiment_schemas.py  test_experiment_states.py  test_hardware_models.py  test_initialisation_loop.py  test_initialisation_process.py  test_mcp_client.py  test_model_adapters.py  test_runtime_boundaries.py
(+195 files in other folders)
