[project]
name = "gerbera-cli"
version = "0.1.0"
description = "Gerbera CLI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5,<4.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gerbera-cli = "gerbera_cli.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
