[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gerbera"
version = "0.1.0"
description = "Gerbera CLI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5,<4.0",
    "questionary>=2.0,<3.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
mcp = [
    "fastmcp==3.0.0",
]

[project.scripts]
gerbera = "gerbera_cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
